# plastexdepgraph

./: .gitignore  MANIFEST.in  README.md  requirements_tests.txt  setup.cfg  setup.py  test.py
.github/workflows/: test.yaml
plastexdepgraph/templates/: dep_graph.html
