[metadata]
name = plastexdepgraph
description = Dependency graph plugin for plasTeX.
long_description = file: README.md
long_description_content_type = text/markdown
version = 0.0.2
author = Patrick Massot
url = https://github.com/PatrickMassot/plastexdepgraph
classifiers=
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent

[options]
python_requires= >=3.7
zip_safe = False
include_package_data = True
install_requires = 
  plasTeX >= 3.1
